Fix installation styling, remove duplicate installation section

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -25,6 +25,8 @@
 
 {% if id %}
 
+<section>
+
 <h2 id="installation">Installation</h2>
 
 <p>Just include the this JS file and you're good:
@@ -34,6 +36,8 @@
 {% if id != "v-app" %}
 If you are also using <a href="../v-app"><code>&lt;v-app></code></a>, you should include that <strong>first</strong>.
 {% endif %}
+
+</section>
 
 {% endif %}
 
