--- a/style.postcss
+++ b/style.postcss
@@ -42,7 +42,20 @@ body > * {
 				margin: 0;
 				font-weight: bold;
 			}
+
+			& small {
+				display: inline-flex;
+				vertical-align: .8em;
+				padding: .3em .5em;
+				width: 6ch;
+				background: white;
+				color: var(--accent-color);
+				font-size: 45%;
+				line-height: 1;
+			}
 		}
+
+
 
 		& a {
 			color: inherit;
