Display correct component name

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -27,7 +27,7 @@
 {% if id and id != "v-app" %}
 <section style="font-style: italic">
 	All examples below use <a href="../v-app/"><code>&lt;v-app></code></a> as well, for clarity,
-	but you can use {{ id }} on your own VueJS apps, without <a href="../v-app/"><code>&lt;v-app></code></a>.
+	but you can use {{ title | escape }} on your own VueJS apps, without <a href="../v-app/"><code>&lt;v-app></code></a>.
 </section>
 {% endif %}
 
