Add functions, export mixin, add createApp and document the various ways to use MaVue

--- a/style.postcss
+++ b/style.postcss
@@ -5,8 +5,8 @@
 	--color-blue: hsl(var(--color-blue-hs) 50%);
 	--color-magenta-hs: 335 90%;
 	--color-magenta: hsl(var(--color-magenta-hs) 50%);
-	--color-green-hs: 90 90%;
-	--color-green: hsl(var(--color-green-hs) 50%);
+	--color-green-hs: 85 80%;
+	--color-green: hsl(var(--color-green-hs) 45%);
 	--color-orange-hs: 30 100%;
 	--color-orange: hsl(var(--color-orange-hs) 50%);
 
@@ -223,6 +223,7 @@ button {
 		font-weight: bold;
 		text-transform: uppercase;
 		color: var(--color);
+		mix-blend-mode: multiply;
 	}
 
 	&::after {
