--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -9,7 +9,12 @@
 	<link rel="stylesheet" href="{{ page | relative }}/style.css" />
 
 	<script src="../v-app/v-app.js" type="module"></script>
-	{% if id and id != "v-app" %}
+	{% if type === "functions" %}
+	<script type="module">
+		import * as {{ id | CamelCase }} from "./{{ id }}.js";
+		VApp.registerHelper({{ id | CamelCase }});
+	</script>
+	{% elseif id and id != "v-app" %}
 	<script src="{{ id }}.js" type="module"></script>
 	{% endif %}
 	{% if hasCSS %}
@@ -34,11 +39,12 @@
 {{ content | safe }}
 
 
-<section>
 
-<h2 id="installation">Installation</h2>
 
 {% if id %}
+	<section>
+
+	<h2 id="installation">Installation</h2>
 
 	{% if id === "v-app" %}
 	<p>Just include this JS file before any other MaVue helpers and you’re good:
@@ -64,15 +70,22 @@
 					}
 				}).mount("#app");
 			</code></pre>
+		{% elseif type === "functions" %}
+			<p>If not using <code>&lt;v-app></code>, you can import the functions individually:
+
+			<pre class="language-js"><code>
+				import * as {{ id | CamelCase }} from "https://mavue.mavo.io/{{ id }}/{{ id }}.js";
+
+				// Then use it in your VueJS app
+				createApp({
+					/* ... */
+					methods: {
+						...{{ id | CamelCase }}
+					}
+				}).mount("#app");
+			</code></pre>
 		{% endif %}
 	{% endif %}
-
-{% else %}
-
-	<pre class="language-html"><code>&lt;script src="https://mavue.mavo.io/mavue.js" type="module">&lt;/script></code></pre>
-
-	This imports every MaVue helper. If you only need a few, you can import them individually, following the instructions on their individual pages.
-
 {% endif %}
 
 </section>
