--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -66,7 +66,7 @@
 				createApp({
 					/* ... */
 					{{ type }}s: {
-						"{{ id }}": {{ id | CamelCase }}
+						"{{ id | replace("v-", "") }}": {{ id | CamelCase }}
 					}
 				}).mount("#app");
 			</code></pre>
