Link to tests from menu

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -32,6 +32,7 @@
 
 <nav>
 	<a href="#installation">Installation</a>
+	{% if hasTests %}<a href="tests/">Tests</a>{% endif %}
 	<a href="https://github.com/mavoweb/mavue/tree/main/{{ id }}">GitHub</a>
 </nav>
 
