--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -36,7 +36,7 @@
 	<a href="https://github.com/mavoweb/mavue/tree/main/{{ id }}">GitHub</a>
 </nav>
 
-{% if id and id != "v-app" %}
+{% if id and not (id in ["v-app", "create-app"]) %}
 <section style="font-style: italic">
 	All examples below use <a href="../v-app/"><code>&lt;v-app></code></a> as well, for clarity,
 	but you can use {{ title | escape }} on your own VueJS apps, without <a href="../v-app/"><code>&lt;v-app></code></a>.
@@ -48,7 +48,7 @@
 
 
 
-{% if id %}
+{% if id and id !== "create-app" %}
 	<section>
 
 	<h2 id="installation">Installation</h2>
